-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6
-
None
-
ec787ce14 (dev), 23f194a76 (6.5), 3f7a73adb (6.4), 05d4fab03 (tqtc/lts-6.2)
32-bit arm build fails with -developer-build:
agent:2022/12/22 13:03:22 build.go:399: | /home/qt/work/build/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtbase/6.6.0-r0/git/src/plugins/platforms/xcb/qxcbwindow.cpp: In member function 'virtual void QXcbWindow::setWindowIcon(const QIcon&)': agent:2022/12/22 13:03:22 build.go:399: | /home/qt/work/build/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtbase/6.6.0-r0/git/src/plugins/platforms/xcb/qxcbwindow.cpp:1300:30: error: comparison of integer expressions of different signedness: 'qsizetype' {aka 'int'} and 'uint32_t' {aka 'unsigned int'} [-Werror=sign-compare] agent:2022/12/22 13:03:22 build.go:399: | 1300 | if (icon_data.size() > xcb_get_maximum_request_length(xcb_connection())) { agent:2022/12/22 13:03:22 build.go:399: | | ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ agent:2022/12/22 13:03:22 build.go:399: | /home/qt/work/build/build/tmp/work/cortexa15t2hf-neon-poky-linux-gnueabi/qtbase/6.6.0-r0/git/src/plugins/platforms/xcb/qxcbwindow.cpp:1301:53: error: format '%llu' expects argument of type 'long long unsigned int', but argument 3 has type 'qsizetype' {aka 'int'} [-Werror=format=] agent:2022/12/22 13:03:22 build.go:399: | 1301 | qWarning("Ignoring window icon: Size %llu exceeds maximum xcb request length %u.", agent:2022/12/22 13:03:22 build.go:399: | | ~~~^ agent:2022/12/22 13:03:22 build.go:399: | | | agent:2022/12/22 13:03:22 build.go:399: | | long long unsigned int agent:2022/12/22 13:03:22 build.go:399: | | %u agent:2022/12/22 13:03:22 build.go:399: | 1302 | icon_data.size(), xcb_get_maximum_request_length(xcb_connection())); agent:2022/12/22 13:03:22 build.go:399: | | ~~~~~~~~~~~~~~~~ agent:2022/12/22 13:03:22 build.go:399: | | | agent:2022/12/22 13:03:22 build.go:399: | | qsizetype {aka int} agent:2022/12/22 13:03:22 build.go:399: | cc1plus: all warnings being treated as errors
- depends on
-
QTBUG-109783 undefined reference to `qt_memfill32' and `qt_memfill64'
-
- Closed
-
- relates to
-
QTQAINFRA-3948 Remove -no-warnings-are-errors for qemu CI builds
-
- Open
-
- resulted from
-
QTBUG-102628 Application will crash if setWindowsIcon with a big ICON
-
- Closed
-